# Rag_luat_test

./: .gitignore  Untitled-1.ipynb  check_llm_provider_availability.py  chunk_json.py  chunk_law.py  embedding_store.py  evaluate.py  evaluate_notebook.ipynb  evaluate_notebook.py  extract_sections.py  extract_sections_2.py  extraction_test_report.txt  fill_template_openai.py  fix_grammar_ocr.py  generate_verdict_from_eval.py  greedy_set_cover.py  law_clause_retrieve.py  law_retriever_clause_106_output.txt  law_retriever_edgecase_test_report.txt  law_retriever_sample_output.txt  list_to_run.txt  lp_set_cover.py  main.py  normalize_law_clause_indices.py  ocr_marker_surya.py  patch_cac_dieu_quyet_dinh.py  pipeline.py  pyproject.toml  split_cases_test.txt  split_cases_train.txt  split_origin_json.py  splitter.py  visualize_eval.py
data_create/: extract_sections.py  fill_template_aistudio.py  fill_template_openai.py  fill_template_openrouter.py  generate_synthetic_summary_aistudio.py  generate_synthetic_summary_openrouter.py
law/: 1_preprocess.py  2025.docx  2_parse_structure.py  3_resolve_mentions.py  4_build_full_text.py  chunk_law.py  convert.py  fill_template_openai.py  g_parse.py  parse_law.py  sasa.py  verify_1.py
output/chroma_db_test/: chroma.sqlite3
rag/: __init__.py  config.py
rag/core/: __init__.py  embeddings.py  law_embeddings.py  law_retriever.py  sentencing.py  verdict_labels.py
rag/evaluation/: __init__.py  case_only_embedding_optimizer.py  generation_eval.py  (+2 more)
scratch/: add_cell.py  check_clauses.py  cleanup_duplicates.py  move_missing_json.py
(+8 files in other folders)
